# mykvm

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  vite.config.mjs
.github/ISSUE_TEMPLATE/: config.yml  setup_help.yml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-07-13-balanced-input-sync-reliability.md  2026-07-13-bate-preview-updater.md
scripts/: build-mac-arm.sh  check-dev-env.ps1  check-dev-env.sh  install-mac-app.sh  run-tauri-dev.ps1  run-tauri-dev.sh  sign-mac-app.sh
src/: App.css  App.tsx  constants.ts  defaultLayout.ts  desktopApi.ts  hotkeyInput.ts  i18n.ts  index.css  layout.ts  main.tsx  runtime.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  input.rs  lib.rs  main.rs  performance.rs  quic_transport.rs
