[package]
name = "mykvm"
version = "0.1.0"
description = "A cross-platform software KVM prototype"
authors = ["XxMinor"]
license = "MIT"
repository = "https://github.com/XxMinor/mykvm"
edition = "2021"
rust-version = "1.77.2"
default-run = "mykvm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mykvm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# The Windows-only lock-screen input helper lives in its own crate (input-helper/)
# so it is never a binary of THIS package. If it were, Tauri would try to bundle
# it into the macOS .app and Linux .deb (it only exists on Windows) and fail. It
# is built for Windows by scripts/build-tauri-assets.mjs and attached to the
# Windows installer via externalBin (see tauri.windows.conf.json).
[workspace]
members = ["input-helper"]
resolver = "2"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
rmp-serde = "1"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-autostart = "2"
arboard = "3.6.1"
ring = "0.17.14"
quinn = "0.11"
rcgen = "0.13"
base64 = "0.22"
socket2 = "0.6"
tokio = { version = "1.52", features = ["rt-multi-thread", "io-util", "sync", "time"] }
tauri-plugin-global-shortcut = "2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = { version = "0.25", features = ["highsierra"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.8.1"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_Security", "Win32_Security_Authorization", "Win32_Storage_FileSystem", "Win32_System_DataExchange", "Win32_System_IO", "Win32_System_LibraryLoader", "Win32_System_Memory", "Win32_System_Ole", "Win32_System_Pipes", "Win32_System_ProcessStatus", "Win32_System_Registry", "Win32_System_RemoteDesktop", "Win32_System_Services", "Win32_System_StationsAndDesktops", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
image = { version = "0.25", default-features = false, features = ["bmp"] }
